--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>QARI ALI QURAN ACADEMY:-</h1>
     <P>assalamuallikum my name is qari ali i am a online quran teacher and islamic teacher </P>
     <img src="c:\Users\i.Tech Computers\Downloads\IMG-20240221-WA0128 (1).jpg" width="600" height="450">
-</div>
+</div><br><br>
 
 <div class="row">
     <div class="column">
@@ -37,7 +37,7 @@
         <div class="footer-section">
            <h2>ENROLL NOW:-</h2>
             <h2>Contact Us</h2>
-            <a href="mailto:info@example.com">Email: info@example.com</a>
+            <a href="mailto:info@example.com">Email: info@example.com</a><br><br>
             <a href="tel: +92 3151577509">Phone: +92 3151577509</a>
         </div>
 
