--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <h1>QARI ALI QURAN ACADEMY:-</h1>
-    <P>assalamuallikum my name is qari ali i am a online quran teacher and islamic teacher </P>
+    <P>assalamuallikum my name is qari ali i am a online quran teacher and islamic teacher. </P>
     <img src="c:\Users\i.Tech Computers\Downloads\IMG-20240221-WA0128 (1).jpg" width="600" height="450">
 </div><br><br>
 
