--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <div>
     <h1>QARI ALI QURAN ACADEMY:-</h1>
     <P>assalamuallikum my name is qari ali i am a online quran teacher and islamic teacher. </P>
-    <img src="c:\Users\i.Tech Computers\Downloads\IMG-20240221-WA0128 (1).jpg" width="600" height="450">
+    <img src="IMG-20240221-WA0128 (1).jpg">
 </div><br><br>
 
 <div class="row">
     <div class="column">
-    <img src="c:\Users\i.Tech Computers\Desktop\download.jpg">
+    <img src="download (1).jpeg">
     <h3>ENROLL NOW</h3>
     </div>
     <div class="column">
-      <img src="c:\Users\i.Tech Computers\Desktop\unnamed.png" height="200">
+      <img src="images 1.png" height="200">
       <h3>ENROLL NOW</h3>
     </div>
     <div class="column">
-      <img src="c:\Users\i.Tech Computers\Desktop\download (1).jpg" height="200">
+      <img src="download.jpeg" height="200">
       <h3>ENROLL NOW</h3>
     </div>
   </div>
