--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="container">
     <h1>QARI ALI QURAN ACADEMY:-</h1>
     <P>assalamuallikum my name is qari ali i am a online quran teacher and islamic teacher. </P>
     <img src="IMG-20240221-WA0128 (1).jpg">
@@ -15,30 +15,24 @@
 
 <div class="row">
     <div class="column">
-    <img src="download (1).jpeg">
+    <img src="download (1).jpeg" width="300">
     <h3>ENROLL NOW</h3>
     </div>
     <div class="column">
-      <img src="images 1.png" height="200">
+      <img src="images 1.png" height="200" width="300">
       <h3>ENROLL NOW</h3>
     </div>
     <div class="column">
-      <img src="download.jpeg" height="200">
+      <img src="download.jpeg" height="200" width="300">
       <h3>ENROLL NOW</h3>
     </div>
   </div>
   
-  
-  <div class="footer">
-    <div class="footer-content">
-        
-           
-        </div>
         <div class="footer-section">
            <h2>ENROLL NOW:-</h2>
             <h2>Contact Us</h2>
             <a href="mailto:info@example.com">Email: info@example.com</a><br><br>
-            <a href="tel: +92 3151577509">Phone: +92 3151577509</a>
+            <a href="https://wa.me/923151577509">Phone: +92 3151577509</a>
         </div>
 
     <p>&copy; 2024 Your Company. All Rights Reserved.</p>
