--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <a href="https://wa.me/923151577509">Phone: +92 3151577509</a>
         </div>
 
-    <p>&copy; 2024 Your Company. All Rights Reserved.</p>
+   <p>Developed By "Uzair ahmed".</p>
+
 </div>
 
 </body>
