--- a/index.html
+++ b/index.html
@@ -15,19 +15,25 @@
 
 <div class="row">
     <div class="column">
-    <img src="download (1).jpeg" width="300">
+      <a href="https://wa.me/923151577509">
+    <img src="download (1).jpeg" onclick="href=location.href='wa.me/923151577509'" width="300">
+    </a>
     <h3>ENROLL NOW</h3>
     </div>
     <div class="column">
+      <a href="https://wa.me/923151577509">
       <img src="images 1.png" height="200" width="300">
+      </a>
       <h3>ENROLL NOW</h3>
     </div>
     <div class="column">
+      <a href="https://wa.me/923151577509">
       <img src="download.jpeg" height="200" width="300">
+      </a>
       <h3>ENROLL NOW</h3>
     </div>
   </div>
-  
+
         <div class="footer-section">
            <h2>ENROLL NOW:-</h2>
             <h2>Contact Us</h2>
@@ -35,8 +41,7 @@
             <a href="https://wa.me/923151577509">Phone: +92 3151577509</a>
         </div>
 
-   <p>Developed By "Uzair ahmed".</p>
-
+    <p>Developed By "Uzair ahmed".</p>
 </div>
 
 </body>
